examples/test/testpolicy9670.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9670
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key21: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value5
      podSelector:
        matchLabels:
          key14: value46
          key5: value21
          key46: value5
